<?xml version="1.0" encoding="utf-8"?>
<menu
	xmlns:android="http://schemas.android.com/apk/res/android">
	<item
		android:id="@+id/mainmenu_save"
		android:title="@string/mainmenu_exit"
		android:icon="@android:drawable/ic_menu_save"
		android:showAsAction="always"/>
	
	<item
		android:enabled="true"
		android:id="@+id/mainmenu_father"
		android:title="@string/mainmenu_father"
		android:showAsAction="always"
		 />
		<item
		android:enabled="true"
		android:id="@+id/mainmenu_home"
		android:title="@string/mainmenu_home"
		android:showAsAction="ifRoom"
		 />
	<item
		android:id="@+id/mainmenu_refresh"
		android:title="@string/mainmenu_refresh"
		android:showAsAction="never" />
	<item
		android:id="@+id/mainmenu_createdir"
		android:title="@string/mainmenu_createdir" 
		android:showAsAction="never"/>

</menu>