<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@color/white">

    <RelativeLayout
        android:id="@+id/relativeLayout_title_and_back"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="@drawable/titlebar_lightgray_bg" >

        <Button
            android:id="@+id/button_back"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:background="@drawable/lib_back_button" />

        <TextView
            android:id="@+id/play_title_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:shadowColor="#ff000000"
            android:shadowDx="3.0"
            android:shadowDy="3.0"
            android:shadowRadius="3.0"
            android:text="@string/me_vip_text"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#ffffff" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout_noLogin"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:visibility="gone" >

        <Button
            android:id="@+id/button_to_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/no_login" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/relativeLayout_Login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/img"
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:contentDescription="@string/pic"
                android:layout_gravity="center_vertical"
                android:padding="10dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/buy_username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/buy_user"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/buy_remind"
                        android:textColor="#444444"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/buy_account"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/buy_remind"
                        android:textColor="@color/app_color"
                        android:textSize="16sp" />

                    <Button
                        android:id="@+id/buy_iyubi"
                        android:layout_width="60dp"
                        android:layout_height="24dp"
                        android:layout_marginLeft="10dp"
                        android:background="@drawable/recharge"
                        android:text="@string/buy_tobuy"
                        android:textColor="#ffffff"
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/buy_state"
                        android:textColor="#444444"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/buy_state"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/buy_state"
                        android:textColor="@color/app_color"
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/buy_valid"
                        android:textColor="#444444"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/buy_deadline"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/buy_valid"
                        android:textColor="@color/app_color"
                        android:textSize="16sp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="#b7b7b7"
            android:orientation="horizontal"
            android:padding="5dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/buy_function"
                android:textColor="#444444"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:paddingTop="10dp" >

            <TextView
                android:id="@+id/image_ad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="10dp"
                android:drawableTop="@drawable/pay_ad"
                android:gravity="center"
                android:text="@string/person_ad" />

            <TextView
                android:id="@+id/image_repeat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:drawablePadding="10dp"
                android:drawableTop="@drawable/pay_repeat"
                android:gravity="center"
                android:text="@string/person_read" />

            <TextView
                android:id="@+id/image_limit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:drawablePadding="10dp"
                android:drawableTop="@drawable/pay_limit"
                android:gravity="center"
                android:text="@string/person_down" />

            <TextView
                android:id="@+id/image_speed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:drawablePadding="10dp"
                android:drawableTop="@drawable/pay_speed"
                android:gravity="center"
                android:text="@string/person_award" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/button_buy"
        android:layout_width="240dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:background="@drawable/title_button_background"
        android:text="@string/buy_buy"
        android:textColor="#ffffff"
        android:textSize="18sp" />

</LinearLayout>